--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link rel="preload" href="assets/fonts/Kachusha.ttf" as="font" type="font/ttf" crossorigin>
   <link rel="preload" href="assets/fonts/Ubuntu-Regular.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="icon" href="assets/images/cropped-LOGO-CICRAL-32x32.png" type="image/png" />
 </head>
-<body>
-  <header class="header">
-    <div class="logo">
-      <img src="assets/images/Logo-CICRAL-Rojo-300x262.png" alt="CICRAL Logo" />
-    </div>
-    <nav class="navbar">
-      <a href="#">Noticias</a>
-      <a href="#">Sobre Nosotros</a>
-      <a href="#">Acuerdos</a>
-      <a href="#">Comunicación</a>
-      <a href="#">Viajes</a>
-      <a href="#">Encuentros</a>
-      <a href="#">Programas</a>
-      <a href="#">Contacto</a>
-    </nav>
+<body>  
+  <header class="header">        
+      <nav class="navbar">
+        <div class="logo">
+          <img src="assets/images/Logo-CICRAL-Rojo-300x262.png" alt="CICRAL Logo" />
+        </div>
+        <a href="#noticias">Noticias</a>
+        <a href="#about">Sobre Nosotros</a>
+        <a href="#doing">¿Qué hacemos?</a>
+        <a href="#contacto">Contacto</a>
+        <div class="logo">
+          <img src="assets/images/ecuador.png" alt="Ecuador Logo" />       
+        </div>
+        
+      </nav>   
   </header>
 
   <section class="hero">
@@ -31,7 +32,8 @@
     <img class="bear-bg" src="assets/images/Background-Cicral.png" alt="Bear Background" />
   </section>
 
-  <section class="noticias">
+
+  <section class="noticias" id="noticias">
     <h2>Noticias:</h2>
     <div class="cards">
       <div class="card">
@@ -49,11 +51,50 @@
     </div>
   </section>
 
-  <section class="about">
+  <section class="about" id="about">
     <h2>Sobre nosotros:</h2>
     <p>
       El Centro de Integración y Cooperación de Rusia y América Latina (CICRAL), tiene como objetivo principal desarrollar y fortalecer las relaciones institucionales entre los distintos países de América Latina y Rusia, con el propósito de consolidar vínculos formales que conduzcan a acciones y proyectos de cooperación, intercambio de experiencias y buenas prácticas, como también el aprovechamiento de las oportunidades de financiamiento internacional y la participación en foros internacionales donde se discuten problemáticas comunes de los pueblos, demostrando las fortalezas competitivas entre los países de Latinoamérica y Rusia.
     </p>
+  </section>
+
+  <section class="doing" id="doing">
+    <h2>¿Qué hacemos?</h2>
+    <div class="cards">
+      <div class="card">        
+        <p><strong>Tecnología</strong><br>Organizamos un Observatorio de eventos tecnológicos en Rusia para empresas ecuatorianas.</p>
+      </div>
+      <div class="card">        
+        <p><strong>Foros económicos</strong><br>Conectamos gremios industriales ecuatorianos con actores rusos como universidades y empresas.</p>
+      </div>
+      <div class="card">       
+        <p><strong>Horizontes Económicos</strong><br>Preparamos eventos en Quito para fomentar la cooperación productiva con Rusia.</p>
+      </div>
+      <div class="card">        
+        <p><strong>Educación</strong><br>Impulsamos becas para ecuatorianos en universidades rusas.</p>
+      </div>
+      <div class="card">        
+        <p><strong>Viajes e intercambios</strong><br>Promovemos el turismo cultural y científico con Rusia.</p>
+      </div>
+      <div class="card">        
+        <p><strong>Relaciones institucionales</strong><br>Fortalecemos vínculos entre organizaciones públicas y privadas entre ambas regiones.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="contacto" id="contacto">
+    <h2>Contacto</h2>
+    <div class="contact-icons">
+      <a href="https://www.instagram.com/ecu.cicral/" target="_blank">
+        <img src="assets/images/instagram-icon.png" alt="Instagram" />
+      </a>
+      <a href="https://www.linkedin.com/in/centro-de-integracion-y-cooperacion-de-rusia-y-am%C3%A9rica-latina-5931332a9" target="_blank">
+        <img src="assets/images/linkedin-logo.png" alt="LinkedIn" />
+      </a>
+      <a href="mailto:comunicacion@cicral-ecu.com">
+        <img src="assets/images/email-logo.png" alt="Email" />
+      </a>
+    </div>
   </section>
 </body>
 </html>
