--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <header class="header">        
       <nav class="navbar">
         <div class="logo">
+          <a href="https://www.cicral.com" target="_blank">
           <img src="assets/images/Logo-CICRAL-Rojo-300x262.png" alt="CICRAL Logo" />
+          </a>
         </div>
         <a href="#noticias">Noticias</a>
         <a href="#about">Sobre Nosotros</a>
@@ -28,6 +30,7 @@
 
   <section class="hero">
     <h1 class="hero-title">CICRAL</h1>
+    <h1 class="hero-title-country">ECUADOR</h1>
     <p class="hero-subtitle">"Centro de Integración y Cooperación de Rusia y América Latina"</p>
     <img class="bear-bg" src="assets/images/Background-Cicral.png" alt="Bear Background" />
   </section>
@@ -59,7 +62,7 @@
   </section>
 
   <section class="doing" id="doing">
-    <h2>¿Qué hacemos?</h2>
+    <h2>Que hacemos</h2>
     <div class="cards">
       <div class="card">        
         <p><strong>Tecnología</strong><br>Organizamos un Observatorio de eventos tecnológicos en Rusia para empresas ecuatorianas.</p>
