--- a/index.html
+++ b/index.html
@@ -1,31 +1,66 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CICRAL</title>
+  <title>CICRAL Ecuador</title>
+   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/styles.css" />
+
+   <!-- Fonts -->
   <link rel="preload" href="assets/fonts/Kachusha.ttf" as="font" type="font/ttf" crossorigin>
   <link rel="preload" href="assets/fonts/Ubuntu-Regular.ttf" as="font" type="font/ttf" crossorigin>
-  <link rel="icon" href="assets/images/cropped-LOGO-CICRAL-32x32.png" type="image/png" />
+
+   <!-- Fav Icon -->
+  <link rel="icon" href="assets/images/cropped-LOGO-CICRAL-32x32.png" type="image/png" /> 
+  
+  <!-- Indexing in engines -->
+  <meta name="robots" content="noindex">
+
+  <!-- SEO in engines -->
+  <meta name="description" content="CICRAL Ecuador - Centro de integración y cooperación entre Rusia y América Latina">
+  <meta name="keywords" content="CICRAL, Ecuador, Rusia, cooperación, integración, tecnología, educación">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://cicral-ecu.com/">
+
 </head>
+
 <body>  
   <header class="header">        
       <nav class="navbar">
         <div class="logo">
-          <a href="https://www.cicral.com" target="_blank">
+          <a href="https://www.cicral.com" target="_blank" aria-label="CICRAL Website">
           <img src="assets/images/Logo-CICRAL-Rojo-300x262.png" alt="CICRAL Logo" />
           </a>
         </div>
+
+        <!-- Web Navlinks -->
+        <div class="nav-links">
+          <a href="#noticias">Noticias</a>
+          <a href="#about">Sobre Nosotros</a>
+          <a href="#doing">¿Qué hacemos?</a>
+          <a href="#contacto">Contacto</a>
+        </div>
+
+        <!-- Responsive Navlinks -->
+        <button class="menu-toggle" aria-label="Toggle menu">
+          ☰
+        </button>
+
+        <div class="logo">
+          <img src="assets/images/ecuador.png" alt="Ecuador Flag" />       
+        </div>
+
+      </nav> 
+      
+      <div class="nav-links-mobile">
         <a href="#noticias">Noticias</a>
         <a href="#about">Sobre Nosotros</a>
         <a href="#doing">¿Qué hacemos?</a>
         <a href="#contacto">Contacto</a>
-        <div class="logo">
-          <img src="assets/images/ecuador.png" alt="Ecuador Logo" />       
-        </div>
+      </div>        
         
-      </nav>   
   </header>
 
   <section class="hero">
@@ -40,16 +75,22 @@
     <h2>Noticias:</h2>
     <div class="cards">
       <div class="card">
-        <img src="assets/images/Mayo-9.png" alt="Noticia 1" />
+        <a href="https://www.instagram.com/p/DLIOD_Ax9_H/?img_index=1" target="_blank">
+        <img src="assets/images/Mayo-9.jpg" alt="Noticia 1" />
         <p><strong>CICRAL Ecuador presente en la celebración del Día de la victoria en Quito</strong><br>10 mayo, 2025</p>
+        </a>  
       </div>
       <div class="card">
-        <img src="assets/images/enbajada_uio.png" alt="Noticia 2" />
+        <a href="https://www.instagram.com/p/DLF1nOPxnd7/?img_index=1" target="_blank">        
+        <img src="assets/images/enbajada_uio.jpg" alt="Noticia 2" />        
         <p><strong>CICRAL Ecuador y la Embajada de Rusia en Ecuador planifican un año de cooperación estratégica</strong><br>15 abril, 2025</p>
+        </a>  
       </div>
       <div class="card">
-        <img src="assets/images/imbrics.png" alt="Noticia 3" />
-        <p><strong>Fortaleciendo lazos: CICRAL Ecuador avanza en su integración con el Foro de Municipios BRICS</strong><br>24 febrero, 2025</p>
+        <a href="https://www.instagram.com/p/DLD2l6Kx-M9/" target="_blank">
+        <img src="assets/images/imbrics.jpg" alt="Noticia 3" />
+        <p><strong>CICRAL Ecuador participante en evento de relaciones comerciales y económicas entre Rusia y América Latina.</strong><br>10 abril, 2025</p>
+        </a>  
       </div>
     </div>
   </section>
@@ -99,5 +140,33 @@
       </a>
     </div>
   </section>
+
+<!-- Js Scripts -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const toggleBtn = document.querySelector('.menu-toggle');
+      const navLinks = document.querySelector('.nav-links-mobile');
+      if (toggleBtn && navLinks) {
+        toggleBtn.addEventListener('click', () => {
+          navLinks.classList.toggle('show');
+        });
+      }
+    });
+  </script>
+
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CICRAL Ecuador",
+    "url": "https://cicral-ecu.com",
+    "logo": "https://cicral-ecu.com/assets/images/Logo-CICRAL-Rojo-300x262.png",
+    "sameAs": [
+      "https://www.instagram.com/ecu.cicral/",
+      "https://www.linkedin.com/in/centro-de-integracion-y-cooperacion-de-rusia-y-am%C3%A9rica-latina-5931332a9"
+    ]
+  }
+  </script>
+
 </body>
 </html>
