--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
 
         <!-- Web Navlinks -->
         <div class="nav-links">
-          <a href="#noticias">Noticias</a>
-          <a href="#about">Sobre Nosotros</a>
-          <a href="#doing">¿Qué hacemos?</a>
-          <a href="#contacto">Contacto</a>
+          <a href="index.html#noticias">Noticias</a>
+          <a href="index.html#about">Sobre Nosotros</a>
+          <a href="index.html#doing">¿Qué hacemos?</a>
+          <a href="index.html#contacto">Contacto</a>
+          <a href="blog.html">Blog</a>
         </div>
 
         <!-- Responsive Navlinks -->
@@ -72,11 +73,12 @@
       </nav> 
       
       <div class="nav-links-mobile">
-        <a href="#noticias">Noticias</a>
-        <a href="#about">Sobre Nosotros</a>
-        <a href="#doing">¿Qué hacemos?</a>
-        <a href="#contacto">Contacto</a>
-      </div>        
+        <a href="index.html#noticias">Noticias</a>
+        <a href="index.html#about">Sobre Nosotros</a>
+        <a href="index.html#doing">¿Qué hacemos?</a>
+        <a href="index.html#contacto">Contacto</a>
+        <a href="blog.html">Blog</a>
+      </div>         
         
   </header>
 
@@ -94,7 +96,7 @@
       <div class="card">
         <a href="https://www.instagram.com/p/DNOeHQ5xXSB/?hl=en&img_index=1" target="_blank">
         <img src="assets/images/lanzamiento.jpg" alt="Noticia 1" />
-        <p><strong>Lanzamiento oficial de CICRAL Ecuador acompañado por la Embajadade Rusia</strong><br>06 agosto, 2025</p>
+        <p><strong>Lanzamiento oficial de CICRAL Ecuador acompañado por la Embajada de Rusia</strong><br>06 agosto, 2025</p>
         </a>  
       </div>
       <div class="card">
